--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -31,7 +31,7 @@ jobs:
     - run: npm ci
     - name: Test Website
       run: npm test
-  deploy-staging:
+  staging:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
@@ -44,15 +44,15 @@ jobs:
       - run: npm ci
       - name: Build site
         run: npm run build
-    - name: Deploy
-      uses: netlify/actions/cli@master
-      with:
-        args: deploy --dir=build
-      env:
-        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      - name: Deploy
+        uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=build
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
   deploy:
-    needs: [test, lint, build]
+    needs: [test, lint, staging]
     if: github.event_name == 'push'
     runs-on: ubuntu-latest
     steps:
@@ -66,10 +66,10 @@ jobs:
       - run: npm ci
       - name: Build site
         run: npm run build
-    - name: Deploy
-      uses: netlify/actions/cli@master
-      with:
-        args: deploy --dir=build --prod
-      env:
-        NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
-        NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
+      - name: Deploy
+        uses: netlify/actions/cli@master
+        with:
+          args: deploy --dir=build --prod
+        env:
+          NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
+          NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
